# scip-python-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: document.rs  infer.rs  lib.rs  line_index.rs  main.rs  metadata.rs  project.rs  symbols.rs  syntax.rs
tests/: integration.rs
tests/fixtures/meta-pep621/: pyproject.toml
tests/fixtures/meta-poetry/: pyproject.toml
tests/fixtures/shebang/: notpython  tool
tests/fixtures/simple/: main.py
tests/fixtures/simple/pkg/: __init__.py  util.py
tests/fixtures/syntax/: tokens.py
