[package]
name = "scip-python"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
protobuf = "3.7.2"
pyo3 = { version = "0.29.0", features = ["auto-initialize"], optional = true }
pyproject-toml = "0.13.7"
# The ruff and ty crates are vendored from the astral-sh/ruff monorepo
# (submodule in vendor/ruff) because upstream publishes them as internal
# component crates without stability guarantees.
ruff_db = { path = "vendor/ruff/crates/ruff_db", features = ["os"] }
ruff_python_ast = { path = "vendor/ruff/crates/ruff_python_ast" }
ruff_python_parser = { path = "vendor/ruff/crates/ruff_python_parser" }
ruff_text_size = { path = "vendor/ruff/crates/ruff_text_size" }
# Matches the salsa dependency of the vendored workspace; the versions
# must stay in sync so the salsa database types line up.
salsa = { version = "0.27.2", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }
scip = "0.9.0"
toml = "1.1.2"
ty_module_resolver = { path = "vendor/ruff/crates/ty_module_resolver" }
ty_python_core = { path = "vendor/ruff/crates/ty_python_core" }
ty_python_semantic = { path = "vendor/ruff/crates/ty_python_semantic" }
ty_site_packages = { path = "vendor/ruff/crates/ty_site_packages" }
ty_vendored = { path = "vendor/ruff/crates/ty_vendored" }
walkdir = "2.5.0"

[features]
pyo3 = ["dep:pyo3"]
