[package]
name = "scip-python"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
protobuf = "3.7.2"
pyo3 = { version = "0.29.0", features = ["auto-initialize"], optional = true }
pyproject-toml = "0.13.7"
# The ruff and ty crates are vendored from the astral-sh/ruff monorepo
# (submodule in vendor/ruff) because upstream publishes them as internal
# component crates without stability guarantees.
ruff_db = { path = "vendor/ruff/crates/ruff_db", features = ["os"] }
ruff_python_ast = { path = "vendor/ruff/crates/ruff_python_ast" }
ruff_python_parser = { path = "vendor/ruff/crates/ruff_python_parser" }
ruff_text_size = { path = "vendor/ruff/crates/ruff_text_size" }
scip = "0.9.0"
toml = "1.1.2"
ty_module_resolver = { path = "vendor/ruff/crates/ty_module_resolver" }
ty_project = { version = "0.0.0", path = "vendor/ruff/crates/ty_project" }
ty_python_semantic = { path = "vendor/ruff/crates/ty_python_semantic" }
walkdir = "2.5.0"

[features]
pyo3 = ["dep:pyo3"]
